@@ -1,6 +1,8 @@
 * Allow argument to muninn.open() to be a direct url or path to a muninn
   configuration file.
 
+* Added 'distance(geometry,geometry)' expression function.
+
 * Fixed issue when pulling a product that is a directory using the S3 remote
   backend.
 
